@@ -152,7 +152,7 @@
               (function f param (apply f (field 0 param) (field 1 param)))
             map =
               (function f l
-                (apply (field 18 (global Stdlib__List!)) (apply uncurry f) l)))
+                (apply (field 20 (global Stdlib__List!)) (apply uncurry f) l)))
            (makeblock 0
              (makeblock 0 (apply map gen_cmp vec) (apply map cmp vec))
              (apply map
@@ -190,7 +190,7 @@
                     (apply f (field 0 param) (field 1 param)))
                 map =
                   (function f l
-                    (apply (field 18 (global Stdlib__List!))
+                    (apply (field 20 (global Stdlib__List!))
                       (apply uncurry f) l)))
                (makeblock 0
                  (makeblock 0 (apply map eta_gen_cmp vec)
